--- a/public/index.html
+++ b/public/index.html
@@ -601,23 +601,28 @@
       }
 
       async function loadTasks() {
-        try {
-          const selectedDate = formatDate(currentSelectedDate);
-          const response = await fetch(`https://task-manager-tj38.onrender.com/tasks?date=${selectedDate}`);
-          if (!response.ok) {
-            const errorText = await response.text();
-            throw new Error(`Ошибка ${response.status}: ${errorText}`);
-          }
-          const tasks = await response.json();
-          visibleTasks.length = 0;
-          tasks.forEach(task => visibleTasks.push(task));
-          renderTasks();
-          console.log('Tasks loaded:', tasks);
-        } catch (error) {
-          console.error('Ошибка при загрузке задач:', error);
-          alert(`Не удалось загрузить задачи: ${error.message}. Проверьте бэкенд.`);
-        }
-      }
+  try {
+    const selectedDate = formatDate(currentSelectedDate);
+    const response = await fetch(`https://task-manager-tj38.onrender.com/tasks?date=${selectedDate}`, {
+      method: 'GET',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+    });
+    if (!response.ok) {
+      const errorText = await response.text();
+      throw new Error(`Ошибка ${response.status}: ${errorText}`);
+    }
+    const tasks = await response.json();
+    visibleTasks.length = 0;
+    tasks.forEach(task => visibleTasks.push(task));
+    renderTasks();
+    console.log('Tasks loaded:', tasks);
+  } catch (error) {
+    console.error('Ошибка при загрузке задач:', error);
+    alert(`Не удалось загрузить задачи: ${error.message}. Проверьте бэкенд и CORS.`);
+  }
+}
 
       loadTasks();
     });
