--- a/public/index.html
+++ b/public/index.html
@@ -508,11 +508,25 @@
         const checkbox = document.createElement('div');
         checkbox.className = 'checkbox';
         if (task.completed) checkbox.classList.add('checked');
-        checkbox.addEventListener('click', function(event) {
-          event.stopPropagation();
-          taskItem.classList.toggle('completed');
-          checkbox.classList.toggle('checked');
-        });
+checkbox.addEventListener('click', async function(event) {
+  event.stopPropagation();
+  const newStatus = taskItem.dataset.completed === "true" ? false : true;
+  try {
+    const response = await fetch(`https://task-manager-tj38.onrender.com/tasks/${task.id}`, {
+      method: 'PATCH',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ completed: newStatus })
+    });
+    if (response.ok) {
+      taskItem.dataset.completed = newStatus;
+      taskItem.classList.toggle('completed', newStatus);
+      checkbox.classList.toggle('checked', newStatus);
+    }
+  } catch (error) {
+    console.error('Ошибка при обновлении задачи:', error);
+  }
+});
+
         const inner = document.createElement('div');
         inner.className = 'inner';
         checkbox.appendChild(inner);
