--- a/public/index.html
+++ b/public/index.html
@@ -508,11 +508,36 @@
         const checkbox = document.createElement('div');
         checkbox.className = 'checkbox';
         if (task.completed) checkbox.classList.add('checked');
-        checkbox.addEventListener('click', function(event) {
-          event.stopPropagation();
-          taskItem.classList.toggle('completed');
-          checkbox.classList.toggle('checked');
-        });
+checkbox.addEventListener('click', async function(event) {
+  event.stopPropagation();
+  const isCompleted = !taskItem.classList.contains('completed'); // Определяем новое состояние
+  taskItem.classList.toggle('completed'); // Меняем внешний вид
+  checkbox.classList.toggle('checked'); // Ставим/убираем галочку
+  taskItem.setAttribute('data-completed', isCompleted); // Обновляем атрибут
+
+  // Отправляем запрос на сервер
+  try {
+    const taskId = taskItem.getAttribute('data-id'); // Берём ID задачи
+    const response = await fetch(`https://task-manager-tj38.onrender.com/tasks/${taskId}`, {
+      method: 'PATCH', // Метод PATCH для обновления
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ completed: isCompleted }) // Отправляем новый статус
+    });
+
+    if (!response.ok) {
+      const errorText = await response.text();
+      throw new Error(`Ошибка ${response.status}: ${errorText}`);
+    }
+    console.log(`Задача ${taskId} обновлена: completed = ${isCompleted}`);
+  } catch (error) {
+    console.error('Ошибка при обновлении задачи:', error);
+    alert(`Не удалось обновить задачу: ${error.message}`);
+    // Откатываем изменения, если сервер не ответил
+    taskItem.classList.toggle('completed');
+    checkbox.classList.toggle('checked');
+    taskItem.setAttribute('data-completed', !isCompleted);
+  }
+});
         const inner = document.createElement('div');
         inner.className = 'inner';
         checkbox.appendChild(inner);
