--- a/public/index.html
+++ b/public/index.html
@@ -881,47 +881,52 @@
       // Обработка сохранения задачи
       const modalSubmitBtn = document.getElementById('modalSubmitBtn');
       if (modalSubmitBtn) {
-        modalSubmitBtn.addEventListener('click', async function() {
-          const titleInput = document.getElementById('modalTaskInput');
-          const dateInput = document.getElementById('modalTaskDate');
-          if (!titleInput.value.trim()) {
-            titleInput.style.borderColor = '#BD0935';
-            titleInput.focus();
-            return;
-          }
-          if (new Date(dateInput.value) < new Date().setHours(0,0,0,0)) {
-            dateInput.style.borderColor = '#BD0935';
-            return;
-          }
+modalSubmitBtn.addEventListener('click', async function() {
+  const titleInput = document.getElementById('modalTaskInput');
+  const dateInput = document.getElementById('modalTaskDate');
+  if (!titleInput.value.trim()) {
+    titleInput.style.borderColor = '#BD0935';
+    titleInput.focus();
+    return;
+  }
+  if (new Date(dateInput.value) < new Date().setHours(0,0,0,0)) {
+    dateInput.style.borderColor = '#BD0935';
+    return;
+  }
 
-          const title = titleInput.value.trim();
-          const description = document.getElementById('modalTaskDesc').value;
-          const date = dateInput.value;
-          const time = document.getElementById('modalTaskTime').value;
-          const deadline = date && time ? `${date}T${time}:00` : date ? `${date}T00:00:00` : null;
-          const priority = document.getElementById('modalTaskPriority').value;
-          const reminder = document.getElementById('modalTaskReminder').checked;
+  const title = titleInput.value.trim();
+  const description = document.getElementById('modalTaskDesc').value;
+  const date = dateInput.value;
+  const time = document.getElementById('modalTaskTime').value;
+  const deadline = date && time ? `${date}T${time}:00` : date ? `${date}T00:00:00` : null;
+  const priority = document.getElementById('modalTaskPriority').value;
+  const reminder = document.getElementById('modalTaskReminder').checked;
 
-          if (currentTaskItem) {
-            const taskId = currentTaskItem.dataset.id;
-            try {
-              const response = await fetch(`https://task-manager-tj38.onrender.com/tasks/${taskId}?user_id=${user_id}`, {
-                method: 'PATCH',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({
-                  completed: currentTaskItem.dataset.completed === "true"
-                })
-              });
-              if (!response.ok) throw new Error(`Ошибка ${response.status}`);
-              const updatedTask = await response.json();
-              const taskIndex = visibleTasks.findIndex(t => t.id === parseInt(taskId));
-              if (taskIndex !== -1) visibleTasks[taskIndex] = updatedTask;
-              renderTasks();
-            } catch (error) {
-              console.error('Ошибка при обновлении задачи:', error);
-              alert(`Не удалось обновить задачу: ${error.message}`);
-            }
-          } else {
+  if (currentTaskItem) {
+    const taskId = currentTaskItem.dataset.id;
+    try {
+      const response = await fetch(`https://task-manager-tj38.onrender.com/tasks/${taskId}?user_id=${user_id}`, {
+        method: 'PATCH',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          title,
+          description,
+          deadline,
+          priority,
+          reminder,
+          completed: currentTaskItem.dataset.completed === "true"
+        })
+      });
+      if (!response.ok) throw new Error(`Ошибка ${response.status}`);
+      const updatedTask = await response.json();
+      const taskIndex = visibleTasks.findIndex(t => t.id === parseInt(taskId));
+      if (taskIndex !== -1) visibleTasks[taskIndex] = updatedTask;
+      renderTasks();
+    } catch (error) {
+      console.error('Ошибка при обновлении задачи:', error);
+      alert(`Не удалось обновить задачу: ${error.message}`);
+    }
+  } else {
             try {
               const response = await fetch(`https://task-manager-tj38.onrender.com/tasks?user_id=${user_id}`, {
                 method: 'POST',
